welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: ';' expected but ')' found.
  else if(getX() == getMondeLargeur())-1){setPos(diag%(getMondeHauteur()-1),getMondeHauteur()-1)}
                                        ^